root relative fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "brierre.github.io/MusicalReviewApp",
+  "homepage": "https://brierre.github.io/MusicalReviewApp",
   "name": "movie-review-app",
   "version": "0.1.0",
   "private": true,
